--- a/webproject-Indvidual-Reilly/WebContent/WEB-INF/config.properties
+++ b/webproject-Indvidual-Reilly/WebContent/WEB-INF/config.properties
@@ -1,3 +1,3 @@
-url=ec2-18-188-36-127.us-east-2.compute.amazonaws.com/myDB
+url=jdbc:mysql://ec2-18-188-36-127.us-east-2.compute.amazonaws.com:3306/toDoList
 user= newmysqlremoteuser
 password= mypassword
